[gd_scene load_steps=10 format=3 uid="uid://c216u6q5ttj21"]

[ext_resource type="Script" uid="uid://vs3pa40caipf" path="res://scenes_and_scripts/objects/bonus_block.gd" id="1_mdwwi"]
[ext_resource type="SpriteFrames" uid="uid://cbggspfhjhcek" path="res://assets/spriteframes/bonus_block.tres" id="2_hss1d"]
[ext_resource type="AudioStream" uid="uid://b76ix67kqlo4f" path="res://assets/sounds/brick.wav" id="3_hss1d"]
[ext_resource type="AudioStream" uid="uid://bwlxhl3q2u7bl" path="res://assets/sounds/upgrade.wav" id="4_8l3jg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epb8n"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bnxnj"]
size = Vector2(32, 1)

[sub_resource type="Animation" id="Animation_8l3jg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Image:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hss1d"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Image:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8l3jg"]
_data = {
&"RESET": SubResource("Animation_8l3jg"),
&"hit": SubResource("Animation_hss1d")
}

[node name="BonusBlock" type="StaticBody2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_mdwwi")

[node name="Image" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_hss1d")
animation = &"full"
centered = false

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_epb8n")

[node name="PlayerDetection" type="Area2D" parent="."]
position = Vector2(16, 16)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, 16.5)
shape = SubResource("RectangleShape2D_bnxnj")

[node name="BrickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hss1d")

[node name="UpgradeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8l3jg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8l3jg")
}

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
